# ByteTrackLib

./: .gitignore  CMakeLists.txt
include/: ByteTracker.h  ByteTrackerImpl.h  STrack.h
src/: ByteTrackerImpl.cpp  STrack.cpp
